--- a/content/errors/503.md
+++ b/content/errors/503.md
@@ -5,7 +5,9 @@ icon: wifi_tethering_error
 date: 2023-08-15T11:00:00Z
 draft: false
 ---
-{{< alert context="warning" text="<strong>Did you receive this error while trying to import something?</strong> If so, that means your import was too big. Please use Special:RequestImportDump on Meta to import your file." />}}
+{{< callout context="caution" title="Caution" icon="outline/alert-triangle" >}}
+<strong>Did you receive this error while trying to import something?</strong> If so, that means your import was too big. Please use Special:RequestImportDump on Meta to import your file.
+{{< /callout >}}
 
 **503 (Backend fetch failed) errors** indicate that our servers couldn't be reached. Most of the time, this error is transitory and a simple refresh will solve the issue. Sometimes though, the error may persist for a few minutes, usually caused by high server load which temporarily brings the server down.
 
